# indicators

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  package.xml  platformio.ini
config/: params.yaml
etc/: build.sh  host_tester.cpp
include/: config.h  config.hpp  neo_config.h  protocol.hpp  types.h
include/pilsbot_indicators/: topics.hpp
launch/: bridge.launch.py  stvo.launch.py
lib/: NeoPixel.c  NeoPixel.h  ws2812.c  ws2812.h
rp2040_firmware/: CMakeLists.txt
rp2040_firmware/etc/: .gitignore  build.sh  host_tester.cpp
rp2040_firmware/include/: protocol.hpp
rp2040_firmware/lib/: NeoPixel.c
rp2040_firmware/src/: lights.cpp  lights.hpp  main.cpp
src/: indicator_bridge_node.cpp  lights.cpp  lights.hpp  main.cpp  stvo_translator.cpp
